# notedown-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  Readme.md  package.json  rustfmt.toml
legacy/notedown-error/: Cargo.toml
legacy/notedown-error/src/: lib.rs
legacy/notedown-error/src/error/: error_std.rs  mod.rs
legacy/notedown-error/src/error_3rd/: for_git2.rs  for_html_parser.rs  for_num.rs  for_serde_json.rs
projects/notedown-ast/: Cargo.toml  Readme.md  package.json  rustfmt.toml
projects/notedown-ast/src/: ast.rs  lib.rs  parser.rs  utils.rs
projects/notedown-ast/src/ast/: code.rs  code_block.rs  command.rs  display.rs  escaped.rs  header.rs  list.rs  math.rs  mod.rs  paragraph.rs  range.rs  style.rs  table.rs  title.rs
projects/notedown-ast/src/ast_kind/: code_block.rs  command.rs  header.rs  list.rs  mod.rs  table.rs
projects/notedown-ast/src/ast_node/: mod.rs
projects/notedown-ast/src/atomics/: command.rs  mod.rs
projects/notedown-ast/src/block/: display.rs  mod.rs
projects/notedown-ast/src/command/: display.rs  mod.rs  readme.md
projects/notedown-ast/src/commands/: desktop.rs  io.rs  media.rs  mod.rs  music.rs  value.rs
projects/notedown-ast/src/convert/: mod.rs
projects/notedown-ast/src/errors/: error_custom.rs  error_std.rs  mod.rs
projects/notedown-ast/src/hir/: code.rs  command.rs  heading.rs  link.rs  mod.rs  paragraph.rs  programming.rs  style.rs
projects/notedown-ast/src/language_server/: mod.rs
projects/notedown-ast/src/link/: mod.rs
projects/notedown-ast/src/nodes/: as_element.rs  mod.rs  readme.md
projects/notedown-ast/src/span/: display.rs  mod.rs
projects/notedown-ast/src/store/: mod.rs
projects/notedown-ast/src/text/: display.rs  mod.rs
projects/notedown-ast/src/traits/: display.rs  from.rs  into_node.rs  mod.rs  readme.md  slugify.rs  to_html.rs  to_markdown.rs  to_string.rs  yew.rs
projects/notedown-ast/src/utils/: ask_element.rs  build_ast.rs  build_import.rs  build_number.rs  build_string.rs  desktop.rs  meta_info.rs  mod.rs  range.rs  toc.rs
projects/notedown-ast/src/value/: debug.rs  display.rs  from.rs  mod.rs  readme.md  typing.rs
projects/notedown-ast/tests/: build_toc.rs  commands.note  easy.rs  main.rs  normal.rs  part1.note  part9.note  style.note
projects/notedown-ast/tests/keep_size/: mod.rs
projects/notedown-ast/tests/markdown/: mod.rs  readme.note
projects/notedown-ast/tests/normal/: commands.note  mod.rs
projects/notedown-ast/tests/notedown/: parse_list_2.nd  parse_text.rs  to_html.rs
projects/notedown-error/: Cargo.toml  Readme.md  package.json  rustfmt.toml
projects/notedown-error/src/: lib.rs  mod.rs
projects/notedown-error/src/error/: mod.rs
projects/notedown-error/src/error_3rd/: for_lsp.rs  for_time.rs  mod.rs
projects/notedown-error/src/errors/: display.rs  mod.rs
projects/notedown-error/src/store/: image_record.rs
projects/notedown-fmt/: Cargo.toml  rustfmt.toml
projects/notedown-fmt/src/: formatter.rs  lib.rs  utils.rs
projects/notedown-fmt/tests/: .gitignore  align.rs  main.rs
projects/notedown-fmt/tests/text/: conda.note  easy.rs  mod.rs
projects/notedown-image/: Cargo.toml
projects/notedown-image/src/: lib.rs
projects/notedown-image/src/errors/: mod.rs
projects/notedown-image/src/store/: image_local.rs  mod.rs
projects/notedown-lsp/: Cargo.toml
projects/notedown-lsp/src/: main.rs
projects/notedown-lsp/src/code_action/: mod.rs
projects/notedown-lsp/src/commands/: mod.rs
projects/notedown-lsp/src/completion/: command.md  command.rs  command.yaml  mod.rs  open_close.rs  open_close.yaml  self_close.md  self_close.rs  self_close.yaml  structural.rs
projects/notedown-lsp/src/diagnostic/: document_symbol.rs  mod.rs  toc.rs
projects/notedown-lsp/src/hint/: document_symbol.rs  mod.rs
projects/notedown-lsp/src/io/: mod.rs
projects/notedown-lsp/src/singleton/: mod.rs
projects/notedown-lsp/tests/: main.rs
projects/notedown-macro/: Cargo.toml  package.json
projects/notedown-macro/src/: lib.rs
projects/notedown-package-manager/: Cargo.toml
projects/notedown-package-manager/src/: lib.rs
projects/notedown-package-manager/src/get_download/: mod.rs
projects/notedown-package-manager/src/get_syntect/: mod.rs
projects/notedown-parser/: Cargo.toml  README.md  Readme.md  note_down.pest  note_text.pest
projects/notedown-parser/src/: ast.rs  error.rs  lib.rs  libr.rs  note_down.rs  note_math.rs  note_text.rs  parser.rs  pre_build.rs  utils.rs
projects/notedown-parser/src/atomic/: identifier.rs  ignore.rs  mod.rs  number.rs  text.rs
projects/notedown-parser/src/commands/: mod.rs
projects/notedown-parser/src/config/: mod.rs
projects/notedown-parser/src/helpers/: mod.rs
projects/notedown-parser/src/loader/: mod.rs
projects/notedown-parser/src/notedown/: mod.rs
projects/notedown-parser/src/text/: link.rs  (+2 more)
projects/notedown-parser/tests/: easy.rs  main.rs  pre_build.rs  readme.md
projects/notedown-parser2/: Cargo.toml
projects/notedown-parser2/src/: lib.rs
projects/notedown-parser2/tests/: main.rs
projects/notedown-pest/: Cargo.toml  note_down.pest  rustfmt.toml
projects/notedown-pest/src/: lib.rs
projects/notedown-pest/tests/: main.rs  pre_build.rs
projects/notedown-plugin/: Cargo.toml
projects/notedown-plugin/src/: lib.rs
projects/notedown-runtime/: Cargo.toml  package.json
projects/notedown-runtime/src/: lib.rs
projects/notedown-vscode/: Cargo.toml  Readme.md
projects/notedown-vscode/src/: wasm.rs
projects/notedown-vscode/tests/: main.rs
projects/notedown-wasm/: Cargo.toml
projects/notedown-wasm/tests/: main.rs
projects/notedown-web/: Cargo.toml
projects/notedown-web/src/: wasm.rs
projects/notedown-web/tests/: main.rs
projects/notedown-yew/: Cargo.toml
projects/notedown-yew/src/: lib.rs
projects/notedown-zola/: Cargo.toml
projects/notedown-zola/src/: main.rs  traits.rs  utils.rs
projects/notedown-zola/tests/: main.rs
projects/text-utils/: Cargo.toml  package.json  rustfmt.toml
projects/text-utils/src/: errors.rs  lib.rs
projects/text-utils/tests/: main.rs  text.rs  url.rs
(+288 files in other folders)
