[workspace]
members = ["projects/*"]
default-members = [
    "projects/notedown-ast",
#    "projects/notedown-pest",
#    "projects/notedown-parser",
#    "projects/notedown-parser2",
    "projects/notedown-plugin",
    "projects/text-utils",
]
exclude = [

]

[profile.release]
lto = true
opt-level = "s"