[package]
name = "notedown-error"
version = "1.1.10"
authors = ["Aster <192607617@qq.com>"]
description = "Notedown Error Handlers"
repository = "https://github.com/notedge/notedown-rs/tree/master/projects/notedown-ast"
documentation = "https://docs.rs/notedown-error"
categories = []
keywords = ["error", "notedown"]
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
url = "2.3.1"
yggdrasil-shared = { version = "0.2.2", default-features = false }
# 3rd parts
num = { version = "0.4.0", optional = true }
rust_decimal = { version = "1.26.1", optional = true }
pest = { version = "2.3.1", optional = true }
rsass = { version = "0.26.0", optional = true }
globset = { version = "0.4.9", optional = true }
lsp-types = { version = "0.93.1", optional = true }
chrono = { version = "0.4.22", optional = true }
docx-rs = { version = "0.4.3", optional = true }
serde_json = { version = "1.0.85", optional = true }
html_parser = { version = "0.6.3", optional = true }
git2 = { version = "0.15.0", optional = true }

[dependencies.text-utils]
version = "0.4"
path = "../../projects/text-utils"
optional = true

[dev-dependencies]

[features]
default = []
lsp = ["lsp-types", "yggdrasil-shared/lsp-types"]

[package.metadata.docs.rs]
all-features = true
