[package]
name = "notedown_ast"
version = "0.16.3"
authors = ["Aster <192607617@qq.com>"]
description = "Notedown Abstract Syntax Tree"
repository = "https://github.com/notedge/notedown-rs/tree/master/projects/notedown-ast"
documentation = "https://docs.rs/notedown_ast"
categories = ["text-processing", "template-engine"]
keywords = ["text", "utils"]
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
url = "2.2.2"
num = "0.4.0"
rust_decimal = "1.19.0"
itertools = "0.10.3"
indexmap = "1.7.0"

[dependencies.text-utils]
version = "0.4"
path = "../text-utils"

[dependencies.diagnostic-quick]
version = "0.2.6"
features = ["rust_decimal", "num"]

[dev-dependencies]

[features]
default = []

