[package]
name = "notedown_ast"
version = "0.14.12"
authors = ["Aster <192607617@qq.com>"]
description = "Notedown Abstract Syntax Tree"
repository = "https://github.com/notedge/notedown-rs/tree/master/projects/notedown-ast"
documentation = "https://docs.rs/notedown_ast"
categories = ["text-processing", "template-engine"]
keywords = ["text", "utils"]
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
deriver = "0.0.0"
serde = { version = "1.0.163", features = ["derive"], optional = true }
num = "0.4.0"
rust_decimal = "1.29.0"
itertools = "0.10.5"
indexmap = "1.9.2"

[dependencies.notedown-error]
version = "1.1.10"
path = "../notedown-error"
features = ["url"]

[dependencies.text-utils]
version = "0.4"
path = "../text-utils"

[dev-dependencies]

[features]
default = []
#lsp = ["yggdrasil-shared", "yggdrasil-shared/lsp"]

