[package]
name = "notedown-error"
version = "1.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Notedown Error Handlers"
repository = "https://github.com/notedge/notedown-rs/tree/master/projects/notedown-ast"
documentation = "https://docs.rs/notedown-error"
categories = []
keywords = ["error", "notedown"]
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
url = "2.2.2"
pest = { version = "2.1.3", optional = true }
rsass = { version = "0.23.0", optional = true }
globset = { version = "0.4.8", optional = true }

[dependencies.text-utils]
version = "0.4"
path = "../text-utils"
optional = true

[dev-dependencies]

[features]
default = []

