[package]
name = "notedown_fmt"
version = "0.3.2"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/nyar-lang/Notedown-rs"
readme = "README.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
pest = "2.1.2"
# linked-hash-map = "0.5.2"
text-utils = "0.2.2"
pangu = "0.2"

[dependencies.notedown_parser]
path = "../notedown-parser"
version = "0.5.0"

[dev-dependencies]

[features]
