[package]
name = "notedown-image"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Notedown Image Managers"
repository = "https://github.com/notedge/notedown-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"


[dependencies]
image = "0.23.14"
dashmap = "4.0.2"
url = "2.2.2"

[dev-dependencies]
notedown_ast = { version = "0.13", path = "../notedown-ast" }
