[package]
name = "notedown-lsp"
publish = false
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "..."
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
async-trait = "0.1"
futures = { version = "0.3", features = ["compat"] }
jsonrpc-core = "14.0"
jsonrpc-derive = "14.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["rt-core", "io-std", "macros", "test-util"] }
tokio-util = { version = "0.3", features = ["codec"] }
# lsp-types = { version = "0.82", features = ["proposed"] }
tower-lsp = "0.13"
tower-service = "0.3"
tower-test = "0.3"

