[package]
name = "notedown-lsp"
publish = false
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Notedown LSP Client"
repository = "https://github.com/notedge/notedown-rs/tree/master/projects/notedown-lsp"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
async-trait = "0.1.52"
futures = { version = "0.3.19", features = ["compat"] }
log = "0.4.14"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
# lsp-types = { version = "0.82", features = ["proposed"] }
tokio = { version = "1.14.0", features = ["io-std", "rt-multi-thread", "macros", "test-util"] }
lspower = "1.5.0"
# clipboard = "0.5"
cli-clipboard = "0.2.0"
unicode-xid = "0.2.2"
state = "0.5.2"
itertools = "0.10.3"

[dependencies.notedown-rt]
version= "0.1.0"
path = "../notedown-runtime"