[package]
name = "notedown-macro"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Wasm notedown test"
repository = "https://github.com/notedge/notedown-rs/blob/master/projects/notedown-wasm"
categories = []
keywords = ["macro", "notedown"]
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"


[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
proc-macro2 = "1.0.53"


[dev-dependencies]
