[package]
name = "notedown-pm"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Notedown Text parser"
repository = "https://github.com/notedge/notedown-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"


[dependencies]
notedown_ast = {version = "0.14", path = "../notedown-ast"}

[dependencies.syntect]
version = "4.6.0"
optional = true
features = ["metadata"]

[dependencies.self_update]
version = "0.28.0"


[dev-dependencies]

[features]
default = ["syntect"]