[package]
name = "notedown_parser"
version = "0.12.0"
authors = ["Aster <192607617@qq.com>"]
description = "Notedown Text parser"
repository = "https://github.com/notedge/notedown-rs"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2021"
publish = false

[dependencies]

notedown-pest = {version = "1.0", path = "../notedown-pest"}
url = "2.2.2"

[dependencies.notedown_ast]
version = "0.13"
path = "../notedown-ast"
features = ["pest"]

[dev-dependencies]
