[package]
name = "notedown_parser"
version = "0.12.0"
authors = ["Aster <192607617@qq.com>"]
description = "Notedown Text parser"
repository = "https://github.com/notedge/notedown-rs"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2021"
publish = false

[dependencies]
pex = { version = "0.2.3", features = ["regex"] }


#[dependencies.notedown_ast]
#version = "0.14"
#path = "../notedown-ast"
#features = ["pest"]

[dev-dependencies]
