[package]
name = "notedown_parser"
version = "0.12.0"
authors = ["Aster <192607617@qq.com>"]
description = "Notedown Text parser"
repository = "https://github.com/notedge/notedown-rs"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]

[dependencies.notedown_ast]
version = "0.14.*"
path = "../notedown-ast"
features = []

[dependencies.notedown-error]
version = "1.1.10"
path = "../notedown-error"
features = ["pex"]



[dev-dependencies]
