[package]
name = "notedown_parser_v2"
publish = false
version = "0.5.0"
authors = ["Aster <192607617@qq.com>"]
description = "Notedown Text parser"
repository = "https://github.com/nyar-lang/notedown-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"


[dependencies]
nom = "5"
nom_locate = "2"
notedown_ast = {version = "0.7", path = "../notedown-ast"}

[dev-dependencies]
pest_generator = "2.1"
quote = "1.0"
