[package]
name = "notedown_parser_v2"
publish = false
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Notedown Text parser"
repository = "https://github.com/notedge/notedown-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"


[dependencies]
nom = "7.1.0"
nom_locate = "4.0.0"
notedown_ast = {version = "*", path = "../notedown-ast"}

[dev-dependencies]

