[package]
name = "notedown-rt"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Notedown Text parser"
repository = "https://github.com/notedge/notedown-rs/tree/master/projects/notedown-runtime"
documentation = "https://github.com/notedge/notedown-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"


[dependencies]
notedown_ast = {version = "0.14", path = "../notedown-ast", features = ["globset", "lsp"]}
globset = "0.4.10"
async-std = "1.12.0"

[dependencies.self_update]
version = "0.36.0"


[dev-dependencies]

[features]
default = []
