[package]
name = "notedown_vscode"
version = "0.1.3"
publish = false
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/nyar-lang/Notedown-rs"
readme = "README.md"
license = "MPL-2.0"
edition = "2018"
exclude = ["/tests/*"]

[dependencies]
wasm-bindgen = "0.2.58"
notedown_fmt = {path = "../notedown-fmt",version = "0.3.0"}
notedown_ast = {path = "../notedown-ast",version = "0.3.0"}

[dev-dependencies]

[features]

[lib]
crate-type = ["cdylib", "rlib"]
