[package]
name = "notedown_vscode"
version = "0.2.5"
publish = false
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/nyar-lang/Notedown-rs"
readme = "README.md"
license = "MPL-2.0"
edition = "2018"
exclude = ["/tests/*"]

[dependencies]
wasm-bindgen = "0.2.58"

[dependencies.notedown_fmt]
path = "../notedown-fmt"
version = "0.3.0"

[dependencies.notedown_ast]
path = "../notedown-ast"
version = "0.3.0"


[dev-dependencies]

[features]

[lib]
crate-type = ["cdylib", "rlib"]
