[package]
authors = ["Aster <192607617@qq.com>"]
description = "..."
edition = "2018"
license = "MPL-2.0"
name = "notedown_vscode"
publish = false
readme = "README.md"
repository = "https://github.com/nyar-lang/Notedown-rs"
version = "0.2.5"

[dependencies]
wasm-bindgen = "0.2.58"

[dependencies.notedown_fmt]
path = "../notedown-fmt"
version = "0.3"

[dependencies.notedown_ast]
path = "../notedown-ast"
version = "0.7"

[dev-dependencies]

[features]

[lib]
crate-type = ["cdylib", "rlib"]
