[package]
name = "notedown-wasm"
version = "1.0.0"
publish = false
authors = ["Aster <192607617@qq.com>"]
description = "Wasm notedown test"
repository = "https://github.com/notedge/notedown-rs/tree/master/projects/notedown-ast"
categories = []
keywords = ["error", "notedown"]
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies.notedown-rt]
version = "0"
path = "../notedown-runtime"
default-features = false
features = ["wasm"]

[dev-dependencies]
wasm-bindgen-test = "0.3.28"

[[test]]
name = "wasm"
path = "tests/main.rs"
# target = "wasm32-unknown-unknown"
