[package]
name = "notedown-yew"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "notedown ast and converter"
repository = "https://github.com/nyar-lang/Notedown-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
yew = "0.17"
notedown_parser = {version = "0.7", path = "../notedown-parser"}

[dev-dependencies]

[features]
default = []
