[package]
name = "notedown_zola"
version = "1.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/nyar-lang/Notedown-rs"
readme = "README.md"
license = "MPL-2.0"
edition = "2018"
exclude = ["/tests/*"]

[dependencies]
notedown_ast = {path = "../notedown-ast",version = "0.3.0"}
walkdir = "2.3.1"


[features]
