[package]
name = "notedown_zola"
version = "1.0.1"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/nyar-lang/Notedown-rs"
readme = "README.md"
license = "MPL-2.0"
edition = "2018"
exclude = ["/tests/*"]

[dependencies]
notedown_ast = {path = "../notedown-ast",version = "0.3.2"}
walkdir = "2.3.1"
chrono = "0.4.10"

[features]
