[package]
name = "notedown_zola"
version = "1.0.2"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/nyar-lang/Notedown-rs"
readme = "README.md"
license = "MPL-2.0"
edition = "2018"
exclude = ["/tests/*"]

[dependencies]
walkdir = "2.3.1"
chrono = "0.4.10"

[dependencies.notedown_ast]
path = "../notedown-ast"
version = "0.4.0"
default-features = false
features = ["desktop"]

[features]
