[package]
name = "text-utils"
version = "0.3.0"
authors = ["Aster <192607617@qq.com>"]
repository = "https://github.com/GalAster/text-utils-rs"
documentation = "https://docs.rs/text-utils/0.2.4/tokio/"
description = """
Text utils for unescaping and align
"""
categories = []
keywords = ["text", "utils"]
readme = "README.md"
license = "MPL-2.0"
edition = "2018"
exclude = ["/tests/*"]


[dependencies]
textwrap = "0.11"
percent-encoding = "2.1.0"
slugify = "0.1.0"