[package]
name = "text-utils"
version = "0.3.1"
authors = ["Aster <192607617@qq.com>"]
repository = "https://github.com/notedge/notedown-rs/tree/master/projects/text-utils"
documentation = "https://docs.rs/text-utils/latest/text_utils/"
description = """
Text utils for unescaping and align
"""
categories = []
keywords = ["text", "utils"]
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["/tests/*"]


[dependencies]
textwrap = "0.11"
percent-encoding = "2.1.0"
slugify = "0.1.0"